# multi-agent-system

./: .env.example  API_REFERENCE.md  ARCHITECTURE.md  COMPLETION.md  INDEX.md  QUICKSTART.md  README.md  START_HERE.md  TROUBLESHOOTING.md  pyproject.toml  run_mcp_servers.py  run_supervisor.py  test_tools.py
config/: data.yaml  supervisor_config.yaml
data/: sample_dataset.json
mcp_servers/: __init__.py  data_server.py  math_server.py  text_server.py
multi_agent_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: config.py
sub_agents/: __init__.py  data_agent.py  math_agent.py  text_agent.py
supervisor/: __init__.py  supervisor_agent.py
